--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Notes</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,400i,700"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-	<title>Vim Notes</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,400i,700" rel="stylesheet">
-</head>
-
-<body>
-	<div id="root"></div>
-	<script src="./index.js"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script src="./index.js"></script>
+  </body>
 </html>
