--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,22 @@
   <head>
     <title>Notes</title>
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,400i,700"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i"
-      rel="stylesheet"
-    />
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+
+    <!--
+      <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700" rel="stylesheet" />
+      <link
+        href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,400i,700"
+        rel="stylesheet"
+      />
+      <link
+        href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i"
+        rel="stylesheet"
+      />
+    -->
   </head>
 
   <body>
