--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Notes</title>
+    <title>Coconote</title>
     <meta charset="UTF-8" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
