--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i,700"
+      rel="stylesheet"
+    />
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
   </head>
 
